# jurnalkas

./: .vercelignore  backend_test.py  netlify.toml  pyproject.toml  test_result.md  vercel.json
api/: login.js
backend/: requirements.txt  server.py
frontend/: .env  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  supabaseClient.js
