[tool.poetry]
name = "jurnalkas"
version = "0.1.0"
description = "Aplikasi Jurnal Kas Sederhana"
authors = ["Iwan Syah <iwansyah@example.com>"] # Ganti dengan nama dan email Anda
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "*"
Flask-SQLAlchemy = "*"
Flask-Login = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
